--- a/system/main/playbooks/language/node.yml
+++ b/system/main/playbooks/language/node.yml
@@ -1,19 +1,19 @@
 ---
 - name: Install nodejs
-  pacman: name=community/nodejs state=present
+  community.general.pacman: name=community/nodejs state=present
   become: true
 
 - name: Setup npm
   block:
     - name: Install npm
-      pacman: name=community/npm state=present
+      community.general.pacman: name=community/npm state=present
       become: true
 
     # https://docs.npmjs.com/resolving-eacces-permissions-errors-when-installing-packages-globally
     - name: Don't require sudo access while installing global packages
       block:
         - name: Create a directory for global installations
-          file:
+          ansible.builtin.file:
             path: "{{ ansible_env.HOME }}/.npm-global"
             owner: "{{ ansible_env.USER }}"
             group: "{{ ansible_env.USER }}"
@@ -21,11 +21,11 @@
             state: directory
 
         - name: Configure npm to use the new directory path
-          command: "npm config set prefix '~/.npm-global'"
+          ansible.builtin.command: "npm config set prefix '~/.npm-global'"
           changed_when: false
 
         - name: Export the path in profile
-          blockinfile:
+          ansible.builtin.blockinfile:
             path: "{{ item }}"
             marker: "# {mark} ANSIBLE MANAGED BLOCK: npm-global"
             block: |
